add swagger to task API
