# backend/app/Http/Controllers/Api/TasksController.php
@@ -12,22 +12,23 @@ use App\Http\Controllers\ApiController;
  * Class TasksController
  *
  * @package App\Http\Controllers\Api
+ * 
  */
 class TasksController extends ApiController
 {
     
     /**
-     * Display a listing of the tasks.
-     *
-     *
+     * 
+     * Get tasks
      * @SWG\Get(
-     *     path="/api/tasks",
-     *     description="Returns tasks",
-     *     tags={"Tasks API"},
+     *     path="/tasks",
+     *     description="Display a list of the tasks",
+     *     tags={"tasks . . . to deal with tasks - crud operations -"},
      *     @SWG\Response(
      *         response=200,
-     *         description="ok"
+     *         description="Successful operation"
      *     )
+     *     
      * )
      */
     public function index()
@@ -38,29 +39,29 @@ class TasksController extends ApiController
 
 
     /**
-     * Store a task in database.
+     * Store a task.
      * 
      * @SWG\Post(
-     *     path="/api/tasks",
+     *     path="/tasks",
      *     description="Store the task in database",
-     *     tags={"Tasks API"},
+     *     tags={"tasks . . . to deal with tasks - crud operations -"},
      *     @SWG\Parameter(
      *         name="description",
      *         type="string",
-     *         in="query",
+     *         in="body",
      *         description="Task description",
      *         required=true,
      *     ),
      *     @SWG\Parameter(
      *         name="details",
      *         type="string",
-     *         in="query",
+     *         in="body",
      *         description="Task details",
      *         required=false,
      *     ),
      *     @SWG\Response(
      *         response=200,
-     *         description="OK",
+     *         description="Successful operation",
      *     ),
      *     @SWG\Response(
      *         response=422,
@@ -75,13 +76,22 @@ class TasksController extends ApiController
     }
 
     /**
+     * show a task by ID.
+     * 
      * @SWG\Get(
-     *     path="/api/tasks/{id}",
-     *     description="Return the task data in json",
-     *      tags={"Tasks API"},
+     *     path="/tasks/{ID}",
+     *     description="Return the task that has ID in the URL in JSON",
+     *      tags={"tasks . . . to deal with tasks - crud operations -"},
+     *     @SWG\Parameter(
+     *         name="ID",
+     *         type="integer",
+     *         in="path",
+     *         description="ID of a task",
+     *         required=true,
+     *     ),
      *     @SWG\Response(
      *         response=200,
-     *         description="OK",
+     *         description="Successful operation",
      *     ),
      *     @SWG\Response(
      *         response=422,
@@ -101,13 +111,23 @@ class TasksController extends ApiController
 
 
     /**
+     * 
+     * Edit a task by ID.
+     * 
      * @SWG\Get(
-     *     path="/api/tasks/{id}/edit",
-     *     description="Return the task data in json",
-     *      tags={"Tasks API"},
+     *     path="/tasks/{ID}/edit",  
+     *     description="Update Return the task that has the ID in the URL in JSON",
+     *      tags={"tasks . . . to deal with tasks - crud operations -"},
+     *     @SWG\Parameter(
+     *         name="ID",
+     *         type="integer",
+     *         in="path",
+     *         description="ID of a task",
+     *         required=true,
+     *     ),
      *     @SWG\Response(
      *         response=200,
-     *         description="OK",
+     *         description="Successful operation",
      *     ),
      *     @SWG\Response(
      *         response=422,
@@ -125,27 +145,37 @@ class TasksController extends ApiController
 
 
     /**
+     * 
+     * Update a task by ID.
+     * 
      * @SWG\Put(
-     *     path="/api/tasks/{id}",
-     *     description="Update the task in database",
-     *      tags={"Tasks API"},
+     *     path="/tasks/{ID}",
+     *     description="Update the task that has the ID in the URL",
+     *      tags={"tasks . . . to deal with tasks - crud operations -"},
      *     @SWG\Parameter(
      *         name="description",
-     *         in="query",
+     *         in="body",
      *         type="string",
      *         description="Description of the task",
      *         required=true,
      *     ),
      *     @SWG\Parameter(
      *         name="details",
-     *         in="query",
+     *         in="body",
      *         type="string",
      *         description="Details of the task",
      *         required=false,
      *     ),
+     *     @SWG\Parameter(
+     *         name="ID",
+     *         type="integer",
+     *         in="path",
+     *         description="ID of a task",
+     *         required=true,
+     *     ),
      *     @SWG\Response(
      *         response=200,
-     *         description="OK",
+     *         description="Successful operation",
      *     ),
      *     @SWG\Response(
      *         response=422,
@@ -170,13 +200,23 @@ class TasksController extends ApiController
 
 
     /**
+     * 
+     * Delete a task.
+     * 
      * @SWG\Delete(
-     *     path="/api/tasks/{id}/edit",
-     *     description="Remove the specified task from database",
-     *      tags={"Tasks API"},
+     *     path="/tasks/{ID}",
+     *     description="Delete the task that has the ID in the URL",
+     *      tags={"tasks . . . to deal with tasks - crud operations -"},
+     *     @SWG\Parameter(
+     *         name="ID",
+     *         type="integer",
+     *         in="path",
+     *         description="ID of a task",
+     *         required=true,
+     *     ),
      *     @SWG\Response(
      *         response=200,
-     *         description="OK",
+     *         description="Successful operation",
      *     ),
      *     @SWG\Response(
      *         response=422,
@@ -193,18 +233,35 @@ class TasksController extends ApiController
 
 
     /**
+     * 
+     * Swap the IDs of two tasks.
+     * 
      * @SWG\post(
-     *     path="/api/tasks/{id1}/{id2}",
-     *     description="Swap two tasks in database and return the new updated data",
-     *      tags={"Tasks API"},
+     *     path="/tasks/{ID1}/{ID2}",
+     *     description="Swap two tasks data (description and details) which have the ids ID1 and ID2 in the URL and return the new updated data in JSON",
+     *      tags={"tasks . . . to deal with tasks - crud operations -"},
+     *     @SWG\Parameter(
+     *         name="ID1",
+     *         type="integer",
+     *         in="path",
+     *         description="ID1 of a task",
+     *         required=true,
+     *     ),
+     *     @SWG\Parameter(
+     *         name="ID2",
+     *         type="integer",
+     *         in="path",
+     *         description="ID2 of an other task",
+     *         required=true,
+     *     ),
      *     @SWG\Response(
      *         response=200,
-     *         description="OK",
+     *         description="Successful operation",
      *     ),
      *     @SWG\Response(
      *         response=422,
      *         description="Missing Data"
-     *     )
+     *     ),
      * )
      */
     public function swap($id1,$id2)
